--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,21 @@
 mongo:
     image: mongo:3.6
+    hostname: mongo-db
+    ports:
+     - "27017:27017" 
     command: --nojournal
 client:
     image: iot-isel/fiware-client
     ports:
      - "8081:8081"   
 orion:
-    image: fiware/orion
+    image: fiware/orion-ld
     links:
       - mongo
       - client
     ports:
       - "1026:1026"
-    command: -dbhost mongo
+    command: -dbhost mongo-db -logLevel DEBUG
     environment:
       - TZ=Europe/Lisbon
 node-red:
