--- a/consumer_server/package.json
+++ b/consumer_server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
     "util": "^0.12.3"
   }
 }
