--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,15 @@ client:
     ports:
      - "8081:8081"   
 orion:
-    image: fiware/orion-ld
+    image: fiware/orion
     links:
       - mongo
       - client
-    ports:
+    ports: 
       - "1026:1026"
     command: -dbhost mongo-db -logLevel DEBUG
     environment:
-      - TZ=Europe/Lisbon
+      - TZ=Europe/Lisbon 
 node-red:
      image: nodered/node-red:latest
      links:
